<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_Input" Id="{bd1a5c70-7793-4ab0-a57f-2c33a960f6ef}">
    <Declaration><![CDATA[TYPE ST_Input :
STRUCT
bStart:BOOL;//启动 IN00
bStop:bool;//停止 IN01
bResetAlarm:bool;//复位 IN02
bEStop:bool;//急停 IN03
bDoor:bool;//安全门开关 IN04
bFrockCloseCheck:BOOL;//工装误合盖检测 IN05
bOpenLockCheck0:BOOL;//解锁站流入光电 IN06
bNone3:bool;//预留 IN07
bLine0PushElevator_Cyl_H:BOOL;//主流线拨料升降气缸原位 IN08
bLine0PushElevator_Cyl_W:BOOL;//主流线拨料升降气缸工作位 IN09
bNone6:bool;//预留 IN0A
bNone7:bool;//预留 IN0B
bLine0Push_Cyl_Safe:BOOL;//主流线拨料气缸安全位 IN0C
bAcquireCheck0:BOOL;//接驳线前阻挡光电 IN0D
bAcquirePrevent2_Cyl_H:BOOL;//接驳线前前阻挡气缸原位 IN0E
bAcquirePrevent2_Cyl_W:BOOL;//接驳线前前阻挡气缸工作位 IN0F
bLine0Part_Cyl_H:bool;//主流线分料气缸原位 IN10
bLine0Part_Cyl_W:bool;//主流线分料气缸工作位 IN11
bLine0Prevent_Cyl_H:bool;//主流线阻挡气缸原位 IN12
bLine0Prevent_Cyl_W:bool;//主流线阻挡气缸工作位 IN13
bLine0Push_Cyl_H:bool;//主流线拨料气缸原位 IN14
bLine0Push_Cyl_W:bool;//主流线拨料气缸工作位 IN15
bAcquirePrevent0_Cyl_H:bool;//接驳线前阻挡气缸原位 IN16
bAcquirePrevent0_Cyl_W:bool;//接驳线前阻挡气缸工作位 IN17
bAcquirePrevent1_Cyl_H:bool;//接驳线后阻挡气缸原位 IN18
bAcquirePrevent1_Cyl_W:bool;//接驳线后阻挡气缸工作位 IN19
bAcquireLift_Cyl_H:bool;//接驳线顶升气缸原位 IN1A
bAcquireLift_Cyl_W:bool;//接驳线顶升气缸工作位 IN1B
bAcquirePush_Cyl_H:bool;//接驳模组拨料气缸原位 IN1C
bAcquirePush_Cyl_W:bool;//接驳模组拨料气缸工作位 IN1D
bAcquireElevator_Cyl_H:bool;//接驳模组升降气缸原位 IN1E
bAcquireElevator_Cyl_W:bool;//接驳模组升降气缸工作位 IN1F
bSteeringLift_Cyl_H:bool;//转向站顶升气缸原位 IN20
bSteeringLift_Cyl_W:bool;//转向站顶升气缸工作位 IN21
bSteeringAcquireElevator_Cyl_H:bool;//转向站接驳升降气缸原位 IN22
bSteeringAcquireElevator_Cyl_W:bool;//转向站接驳升降气缸工作位 IN23
bSteeringRotate_Cyl_H:bool;//转向站旋转气缸原位 IN24
bSteeringRotate_Cyl_W:bool;//转向站旋转气缸工作位 IN25
bSteeringAcquireLimit_Cyl_H:bool;//转向站接驳限位气缸原位 IN26
bSteeringAcquireLimit_Cyl_W:bool;//转向站接驳限位气缸工作位 IN27
bOpenLockPrevent_Cyl_H:bool;//解锁站阻挡气缸原位 IN28
bOpenLockPrevent_Cyl_W:bool;//解锁站阻挡气缸工作位 IN29
bOpenLockLift_Cyl_H:bool;//解锁站顶升气缸原位 IN2A
bOpenLockLift_Cyl_W:bool;//解锁站顶升气缸工作位 IN2B
bOpenLockPush_Cyl_H:bool;//解锁站侧推气缸原位 IN2C
bOpenLockPush_Cyl_W:bool;//解锁站侧推气缸工作位 IN2D
bOpenLockRotate_Cyl_H:bool;//解锁站旋转气缸原位 IN2E
bOpenLockRotate_Cyl_W:bool;//解锁站旋转气缸工作位 IN2F
bOpenLockPush2_Cyl_H:bool;//解锁站侧推气缸2原位 IN30
bOpenLockPush2_Cyl_W:bool;//解锁站侧推气缸2工作位 IN31
bTakeUcPrevent_Cyl_H:bool;//取UC站阻挡气缸原位 IN32
bTakeUcPrevent_Cyl_W:bool;//取UC站阻挡气缸工作位 IN33
bTakeUcLift_Cyl_H:bool;//取UC站顶升气缸原位 IN34
bTakeUcLift_Cyl_W:bool;//取UC站顶升气缸工作位 IN35
bTakeUcPush_Cyl_H:bool;//取UC站侧推气缸原位 IN36
bTakeUcPush_Cyl_W:bool;//取UC站侧推气缸工作位 IN37
bTakeUcRotate_Cyl_H:bool;//取UC站旋转气缸原位 IN38
bTakeUcRotate_Cyl_W:bool;//取UC站旋转气缸工作位 IN39
bTakeUcStandard_Cyl_H:bool;//取UC站校平气缸原位 IN3A
bTakeUcStandard_Cyl_W:bool;//取UC站校平气缸工作位 IN3B
bTakeUcFrockClamp_Cyl_H:BOOL;//取UC站工装夹紧气缸原位 IN3C
bTakeUcFrockClamp_Cyl_W:BOOL;//取UC站工装夹紧气缸工作位 IN3D
bUnloadFrockPrevent_Cyl_H:bool;//下工装站阻挡气缸原位 IN3E
bUnloadFrockPrevent_Cyl_W:bool;//下工装站阻挡气缸工作位 IN3F
bUnloadFrockLift_Cyl_H:bool;//下工装站顶升气缸原位 IN40
bUnloadFrockLift_Cyl_W:bool;//下工装站顶升气缸工作位 IN41
bUnloadFrockPush_Cyl_H:bool;//下工装站拨料气缸原位 IN42
bUnloadFrockPush_Cyl_W:bool;//下工装站拨料气缸工作位 IN43
bTakeUc1Y_Cyl_H:bool;//取UC模组平移Y气缸原位 IN44
bTakeUc1Y_Cyl_W:bool;//取UC模组平移Y气缸工作位 IN45
bTakeUc1Z1_Cyl_H:bool;//取UC模组升降Z1气缸原位 IN46
bTakeUc1Z1_Cyl_W:bool;//取UC模组升降Z1气缸工作位 IN47
bTakeUc1Z2_Cyl_H:bool;//取UC模组升降Z2气缸原位 IN48
bTakeUc1Z2_Cyl_W:bool;//取UC模组升降Z2气缸工作位 IN49
bTakeUc1Rotate_Cyl_H:bool;//取UC模组旋转气缸原位 IN4A
bTakeUc1Rotate_Cyl_W:bool;//取UC模组旋转气缸工作位 IN4B
bTakeUc1Clamp_Cyl_H:bool;//取UC模组夹紧气缸原位 IN4C
bTakeUc1Clamp_Cyl_W:bool;//取UC模组夹紧气缸工作位 IN4D
bUnloadUcElevator_Cyl_H:bool;//下UC皮带升降气缸原位 IN4E
bUnloadUcElevator_Cyl_W:bool;//下UC皮带升降气缸工作位 IN4F
bUnloadUcConveyorPush_Cyl_H:bool;//下UC皮带拨料气缸原位 IN50
bUnloadUcConveyorPush_Cyl_W:bool;//下UC皮带拨料气缸工作位 IN51
bUnloadFrockConveyorPrevent_Cyl_H:bool;//下工装皮带升降气缸原位 IN52
bUnloadFrockConveyorPrevent_Cyl_W:bool;//下工装皮带升降气缸工作位 IN53
bUnloadFrockConveyorPush_Cyl_H:bool;//下工装皮带拨料气缸原位 IN54
bUnloadFrockConveyorPush_Cyl_W:bool;//下工装皮带拨料气缸工作位 IN55
bOpenLockPressPush_Cyl_H:BOOL;//解锁站解压侧推气缸原位 IN56
bOpenLockPressPush_Cyl_W:BOOL;//解锁站解压侧推气缸工作位 IN57
bOpenLockPressRotate_Cyl_H:BOOL;//解锁站解压旋转气缸原位 IN58
bOpenLockPressRotate_Cyl_W:BOOL;//解锁站解压旋转气缸工作位 IN59
bNone34:bool;//预留 IN5A
bNone35:bool;//预留 IN5B
bUnloadUcBeltTipper_Cyl_H:bool;//下UC皮带翻转气缸缩回 IN5C
bUnloadUcBeltTipper_Cyl_W:bool;//下UC皮带翻转气缸伸出 IN5D
bUnloadUcBeltLift_Cyl_H:bool;//下UC皮带顶升气缸缩回 IN5E
bUnloadUcBeltLift_Cyl_W:bool;//下UC皮带顶升气缸伸出 IN5F
bLine0Check1:bool;//主流线分料光电 IN60
bLine0Check2:bool;//主流线阻挡光电 IN61
bLine0Check3:bool;//主流线到位光电 IN62
bAcquireCheck1:bool;//接驳线流入光电 IN63
bAcquireCheck2:bool;//接驳线到位光电 IN64
bSteeringCheck1:bool;//转向站到位光电 IN65
bOpenLockCheck:bool;//解锁站到位光电 IN66
bTakeUcCheck1:bool;//取UC站到位光电 IN67
bUnloadFrockCheck1:bool;//下工装站到位光电 IN68
bUnloadUcCheck1:bool;//下UC皮带流入光电 IN69
bUnloadUcCheck2:bool;//下UC皮带到位光电 IN6A
bUnloadFrockCheck0:BOOL;//下工装站流入光电 IN6B
bUnloadFrockConveyorCheck2:bool;//下工装皮带到位光电 IN6C
bUnloadUcBeltTipper:bool;//下uc皮带翻转光电 IN6D
bTakeUcCheck0:BOOL;//取UC站流入光电 IN6E
bTakeUc1Y_Cyl_Safe:BOOL;//取UC模组平移Y气缸安全位 IN6F
bOpenLockElevator_Cyl_H:bool;//解锁站升降气缸原位 IN70
bOpenLockElevator_Cyl_W:bool;//解锁站升降气缸工作位 IN71
bOpenLockTranslation_Cyl_H:bool;//解锁站解锁平移原位 IN72
bOpenLockTranslation_Cyl_W:bool;//解锁站解锁平移工作位 IN73
bOpenLockPin_Cyl_H:bool;//解锁站按压气缸到原位 IN74
bOpenLockPin_Cyl_W:bool;//解锁站按压气缸到工作位 IN75
bTakeUcElevator_Cyl_H:bool;//取UC站升降气缸原位 IN76
bTakeUcElevator_Cyl_W:bool;//取UC站升降气缸工作位 IN77
bTakeUcPush1_Cyl_H:bool;//取UC站侧推1气缸到原位 IN78
bTakeUcPush1_Cyl_W:bool;//取UC站侧推1气缸到工作位 IN79
bNone45:bool;//预留 IN7A
bNone46:bool;//预留 IN7B
bNone47:bool;//预留 IN7C
bNone48:bool;//预留 IN7D
bNone49:bool;//预留 IN7E
bNone50:bool;//预留 IN7F

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>